<resources>
    <string name="app_name">MyMeds</string>

    <!-- Tela de Login -->
    <string name="text_login">Login</string>
    <string name="text_password">Senha</string>
    <string name="button_entrar">Entrar</string>
    <string name="text_forget">Esqueci minha senha</string>
    <string name="text_cadastro">Ainda não tem uma conta?</string>
    <string name="text_cadastrar">Cadastre-se.</string>

    <!-- Menu -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_minhas_receitas">Minhas Receitas</string>
    <string name="menu_nova_receita">Nova Receita</string>
    <string name="menu_meus_dados">Meus Dados</string>
    <string name="menu_sair">Sair</string>

    <!-- Main -->
    <string name="nova_receita">Adicionar Nova Receita</string>
    <string name="main_title">Minhas Receitas</string>

    <!-- Form Receita -->
    <string name="form_receita_descricao">Descrição da Receita</string>
    <string name="form_receita_obs">Observação</string>
    <string name="form_receita_title">Fotos da Receita</string>
    <string name="form_receita_btn_add_foto">Nova Foto</string>
    <string name="form_receita_btn_publicar">Publicar</string>

    <!-- Form Customer/Pharmacy -->
    <string name="form_customer_title">Cadastro de Cliente</string>
    <string name="form_customer_email">E-mail</string>
    <string name="form_customer_bairro">Bairro</string>
    <string name="form_customer_cep">CEP</string>
    <string name="form_customer_numero">Número</string>
    <string name="form_customer_rua">Rua</string>
    <string name="form_customer_telefone">Celular</string>
    <string name="form_customer_nome">Nome/RazãoSocial</string>
    <string name="form_customer_customer">Cliente</string>
    <string name="form_customer_pharmacy">Farmácia</string>
    <string name="form_customer_senha">Senha</string>
    <string name="form_customer_confirmar_senha">Confirmar senha</string>
    <string name="form_customer_cadastrar">Cadastrar</string>
    <string name="form_customer_cancelar">Cancelar</string>

    <!-- Detalhes Receita -->
    <string name="detalhes">Descrição da Receita</string>
    <string name="description_zoom_touch_close"></string>

    <!-- Propostas -->
    <string name="propostas">Propostas</string>

    <!-- Main Pharmacy -->
    <string name="main_pharmacy_title">Receitas dos clientes</string>

    <!-- Make Proposal -->
    <string name="make_proposal_title">Faça sua proposta</string>
    <string name="make_proposal_detalhes">Informações do Cliente</string>
    <string name="make_proposal_valor">Valor da Receita</string>
    <string name="make_proposal_obs">Observações</string>
    <string name="make_proposal_entrega">Valor da Entrega</string>
    <string name="make_proposal_fazer_proposta">Fazer Proposta</string>

    <!-- Client Details -->
    <string name="client_details_title">Informações do cliente</string>
</resources>
