<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".receita.MainActivity" >
    <item
        android:id="@+id/inicio"
        android:title="@string/menu_inicio"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/minhas_receitas"
        android:title="@string/menu_minhas_receitas"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/receitas_titulo"
        android:title="@string/menu_nova_receita"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/meus_dados"
        android:title="@string/menu_meus_dados"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/sair"
        android:title="@string/menu_sair"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>