<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="25dp"
        android:text="@string/form_customer_title"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        app:layout_constraintBottom_toTopOf="@+id/chavinha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="122dp"
        android:ems="10"
        android:hint="@string/form_customer_nome"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/editCep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/form_customer_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/editRua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editRua"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/form_customer_rua"
        android:inputType="textNoSuggestions|textPostalAddress"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/editBairro"
        app:layout_constraintEnd_toStartOf="@+id/editNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editNumero"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/form_customer_numero"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editRua"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBairro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/form_customer_bairro"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/editSenha"
        app:layout_constraintEnd_toStartOf="@+id/editCep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRua" />

    <EditText
        android:id="@+id/editCep"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/form_customer_cep"
        android:inputType="number"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/editConfirmarSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editBairro"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/form_customer_senha"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintEnd_toStartOf="@+id/editConfirmarSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBairro" />

    <EditText
        android:id="@+id/editConfirmarSenha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="122dp"
        android:ems="10"
        android:hint="@string/form_customer_confirmar_senha"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editSenha"
        app:layout_constraintTop_toBottomOf="@+id/editCep" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginBottom="39dp"
        android:background="@color/colorPrimary"
        android:text="@string/form_customer_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

    <Switch
        android:id="@+id/chavinha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="19dp"
        android:textOff="@string/form_customer_pharmacy"
        android:textOn="@string/form_customer_customer"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toStartOf="@+id/textMudaTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <TextView
        android:id="@+id/textMudaTipo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="195dp"
        android:layout_marginRight="195dp"
        android:layout_marginBottom="5dp"
        android:text="@string/form_customer_customer"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chavinha"
        app:layout_constraintTop_toTopOf="@+id/chavinha" />

</android.support.constraint.ConstraintLayout>