<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="270dp"
        android:ems="10"
        android:hint="@string/form_receita_descricao"
        android:inputType="textPersonName"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/mImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editObs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/form_receita_obs"
        android:inputType="textMultiLine"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescricao" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/form_receita_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/btnNewPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editObs" />

    <Button
        android:id="@+id/btnNewPicture"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/ic_input_add"
        android:gravity="bottom|center"
        android:text="@string/form_receita_btn_add_foto"
        app:layout_constraintBottom_toTopOf="@+id/btnPublicar"
        app:layout_constraintEnd_toStartOf="@+id/mImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnPublicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/form_receita_btn_publicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewPicture" />

    <ImageView
        android:id="@+id/mImageView"
        android:layout_width="105dp"
        android:layout_height="83dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNewPicture"
        app:layout_constraintTop_toBottomOf="@+id/editDescricao"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />
</android.support.constraint.ConstraintLayout>